# PDiFy

./: .gitignore  README.md  convert.py  pyproject.toml
.github/workflows/: publish.yml
src/pdify/: __init__.py  pdify.py
